# .github

./: .copier-answers.yml  .gitignore  .license.tmpl  .pre-commit-config.yaml  LICENSE  Makefile  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: 1-feature.yml  2-refactor.yaml  3-data_exploration.yaml  4-bug.yaml  5-no_code.md  5-no_code.yaml  bug.md  data_exploration.md  feature.md  no_code.md  refactor.md
.github/workflows/: bump.yml  license.yml  lint.yml  release.yml  test.yml  version.yml
scripts/: convert-license-report.py
